# stankin_isit

./: .env.example  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  cpvp_ultra.db
app/frontend/: index.html
app/static/: app.js
static/: styles.css
