[project]
name = "isit"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (==2.8.2)",
    "sqlalchemy (==2.0.36)",
    "sqlmodel (==0.0.22)",
    "uvicorn[standard] (==0.32.0)",
    "fastapi (==0.115.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
